--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   iconify_flutter: ^0.0.7
   pinput: ^5.0.1
   circle_nav_bar: ^2.0.0
-  carousel_slider: ^4.2.1
+  carousel_slider: ^5.1.1
+  google_fonts: ^6.3.0
+  dependencies:
+
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +84,20 @@ flutter:
     - assets/images/splash/nartawi_logo.svg
     - assets/images/home/Language.svg
     - assets/images/home/headphone.svg
+    - assets/images/home/main_page/Coupon.png
+    - assets/images/home/main_page/person.png
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-Light.ttf
+          weight: 300
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
