--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   circle_nav_bar: ^2.0.0
   carousel_slider: ^5.1.1
   google_fonts: ^6.3.0
-  dependencies:
+
 
 
 dev_dependencies:
@@ -86,6 +86,8 @@ flutter:
     - assets/images/home/headphone.svg
     - assets/images/home/main_page/Coupon.png
     - assets/images/home/main_page/person.png
+    - assets/images/home/main_page/product.jpg
+    - assets/images/home/main_page/company.png
   fonts:
     - family: Poppins
       fonts:
