--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   circle_nav_bar: ^2.0.0
   carousel_slider: ^5.1.1
   google_fonts: ^6.3.0
+  flutter_bloc: ^8.1.4
+  equatable: ^2.0.5
 
 
 
