--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ flutter:
     - assets/images/home/main_page/company.png
     - assets/images/home/main_page/supplier_detail/filter.svg
     - assets/images/home/main_page/supplier_detail/empty-state.svg
+    - assets/images/home/main_page/compare.svg
   fonts:
     - family: Poppins
       fonts:
