--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   google_fonts: ^6.3.0
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
+  flutter_rating_bar: ^4.0.1
+  custom_rating_bar: ^3.0.0
 
 
 
