--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   table_calendar: ^3.2.0
   get_it: ^7.7.0
   calendar_date_picker2: ^2.0.1
+  dio:
+  shared_preferences: ^2.2.2
+
 
 
 
