--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   calendar_date_picker2: ^2.0.1
   dio:
   shared_preferences: ^2.2.2
+  intl:
+
 
 
 
@@ -135,6 +137,7 @@ flutter:
     - assets/images/navigation_bar/heart_navigation_bar.svg
     - assets/images/navigation_bar/user-profile_navigation_bar.svg
     - assets/images/navigation_bar/Logosvg.svg
+    - assets/images/app_icon/app_icon.jpeg
 
   fonts:
     - family: Poppins
@@ -176,6 +179,6 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/images/onboaring/Logo.png"
-  adaptive_icon_foreground: "assets/images/onboaring/Logo.png" # foreground نفس اللوجو
-  adaptive_icon_background: "#095BA8"
+  image_path: "assets/images/app_icon/app_icon.jpeg"
+  adaptive_icon_foreground: "assets/images/app_icon/app_icon.jpeg" # foreground نفس اللوجو
+  #adaptive_icon_background: "#095BA8"
