--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   uuid:
   qr_flutter: ^4.1.0
   mobile_scanner: ^7.0.1
+  logging: ^1.2.0
   permission_handler: ^12.0.1
   badges: ^3.1.2
   table_calendar: ^3.2.0
